Search paginations for inventory transaction
